--- a/style.css
+++ b/style.css
@@ -16,45 +16,34 @@ html, body {
 }
 
 .background_picture {
-	height: 90%;
-	width: 94.5%;
-	margin: 3%;
+	width: 100%;
+	height: 100%;
 	background-image: url("beach.jpg");
 	display: table;
-
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
+/*container*/
 .intro {
-	max-width: 1200px;
+	max-width: 100%;
 	margin: 0 auto;
 	text-align: center;
 }
 
+/*name*/
 .intro h1 {
 	color: white;
 	font-family: 'Raleway';
-	font-size:90px;
+	font-size: 70px;
 	font-weight: lighter;
-	margin-top: 150px;
-	margin-bottom: 20px;
-	opacity: 0.9;
+	margin-top: 180px;
+	margin-bottom: 215px;
 }
 
-.intro a {
-	margin-right: 40px;
-	margin-bottom: 500px;
-	transition: margin-bottom 2s, background 0.5s;
-}
-
-.intro a:hover {
-	margin-bottom: 0px;
-}
-
-.intro p {
+.quote {
 	color: white;
 	font-family: 'Raleway';
 	word-spacing: 3px;
@@ -68,13 +57,8 @@ html, body {
     text-align: center;
     border-radius: 50%;
     opacity: 0.9;
-    transition: padding 0.5s, font-size 0.5s;
-}
-
-.fa:hover {
-	padding: 11px;
-	font-size: 21px;
-	opacity: 0.7;
+    margin-right: 40px;
+    margin-bottom: 148px;
 }
 
 .fa-facebook {
@@ -103,12 +87,12 @@ html, body {
 	width:550;
 	height:400;
 	border-radius: 50%;
-	background-image: url("portrait.jpg"), url("portraitbg.jpg");
+	background-image: url("portrait.jpg");
+	background-color: rgb(220,220,220);
 	background-attachment: fixed;
 	background-position: 15% 65%;
 	background-repeat: no-repeat;
-	background-size: 700px 500px, 1700px 850px;
-	background-color: transparent, transparent;
+	background-size: 700px 500px;
 }
 
 .about h1 {
@@ -179,22 +163,13 @@ button:hover {
 	font-size: 25px;
 }
 
-#grad {
-	height: 200px;
-	/*background: linear-gradient(to top left, rgba(220,220,220,1),rgba(220,222,220,0));*/
-	/*background: linear-gradient(to top left, rgb(255,0,0),rgb(255,155,95));*/
-	/*background: linear-gradient(to top left, rgb(0,0,0), rgb(255,255,255));*/
-	margin-left: 8em;
-	margin-right: 8em;
-	opacity: 0.8;
-}
-
 #contentPage img {
 	object-fit: cover;
 	width: 400px;
 	height: 400px;
 	transition: width 0.75s, height 0.75s, opacity 2s;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.4);
+	border-radius: 1%;
 }
 
 #contentPage img:hover {
@@ -205,19 +180,16 @@ button:hover {
 
 #contentPage p {
 	padding-left: 500px;
-	/*text-align: center;*/
 	font-size: 60px;
 	font-family: 'Arima Madurai';
 	padding-top: 100px;
 	padding-bottom: 700px;
 }
 
-#topButton {
-	font-size: 50px;
-	background-color: transparent;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	position: fixed;
-	bottom: 20px;
+footer {
+	background-color: rgb(220,220,220);
+	font-family: 'Raleway';
+	padding-left: 50px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
