--- a/style.css
+++ b/style.css
@@ -169,13 +169,16 @@ html, body {
     background-color: transparent;
     border-style: solid;
     border: none !important;
-    margin: 5% auto;
     padding: 20px;
+    margin-top: 5%;
     border: 1px solid #888;
     display: inline-block;
     color: white;
     font-size: 25px;
-    font-family: 'Raleway'
+    font-family: 'Raleway';
+    top: 50%;
+    left: 50%;
+    /*transform: translateX(-50%) translateY(-50%);*/
 }
 
 /* The Close Button */
