--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@ html, body {
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: cover;
-	transform: translateZ(-10px);
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size:cover;
+	background-size:cover;
 }
 
 /*container*/
@@ -38,7 +40,7 @@ html, body {
 .intro h1 {
 	color: white;
 	font-family: 'Raleway';
-	font-size: 70px;
+	font-size: 50px;
 	font-weight: lighter;
 	margin-top: 180px;
 	margin-bottom: 215px;
@@ -46,10 +48,12 @@ html, body {
 
 .quote {
 	color: white;
-	font-size: 20px;
+	font-size: 18px;
 	font-family: 'Raleway';
 	word-spacing: 3px;
 	letter-spacing: 3px;
+	margin: auto;
+	width: 80%;
 }
 
 @media only screen and (max-device-width: 900px) {
@@ -83,7 +87,10 @@ html, body {
 .portrait {
 	width: 100%;
 	height: 50%;
-	background-size: cover;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size:cover;
+	background-size:cover;
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -111,7 +118,10 @@ html, body {
 .socialMedia {
 	width: 100%;
 	height: 20%;
-	background-size: cover;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size:cover;
+	background-size:cover;
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -176,9 +186,6 @@ html, body {
     color: white;
     font-size: 25px;
     font-family: 'Raleway';
-    top: 50%;
-    left: 50%;
-    /*transform: translateX(-50%) translateY(-50%);*/
 }
 
 /* The Close Button */
