--- a/style.css
+++ b/style.css
@@ -118,10 +118,10 @@ html, body {
 .socialMedia {
 	width: 100%;
 	height: 20%;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
+	-webkit-background-size:cover;-moz-background-size:cover;
 	-o-background-size:cover;
 	background-size:cover;
+	
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
