--- a/style.css
+++ b/style.css
@@ -23,9 +23,6 @@ html, body {
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	-o-background-size:cover;
 	background-size:cover;
 }
 
@@ -87,9 +84,6 @@ html, body {
 .portrait {
 	width: 100%;
 	height: 50%;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	-o-background-size:cover;
 	background-size:cover;
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
@@ -118,10 +112,7 @@ html, body {
 .socialMedia {
 	width: 100%;
 	height: 20%;
-	-webkit-background-size:cover;-moz-background-size:cover;
-	-o-background-size:cover;
 	background-size:cover;
-	
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -164,7 +155,7 @@ html, body {
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    position: fixed;  /*Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
@@ -186,6 +177,11 @@ html, body {
     color: white;
     font-size: 25px;
     font-family: 'Raleway';
+    max-width: 66em;
+    width: 100%;
+
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
 }
 
 /* The Close Button */
