--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ html, body {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size:cover;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 /*container*/
@@ -89,6 +93,10 @@ html, body {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 .description {
@@ -119,6 +127,10 @@ html, body {
 	background-position: center center;
 	margin-bottom: 5%;
 	opacity: 0.9;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 .fa {
