--- a/style.css
+++ b/style.css
@@ -23,11 +23,7 @@ html, body {
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size:cover;
-	top: 0;
-	left: 0;
-	min-width: 100%;
-	min-height: 100%;
+	background-size: auto;
 }
 
 /*container*/
@@ -88,15 +84,11 @@ html, body {
 .portrait {
 	width: 100%;
 	height: 50%;
-	background-size:cover;
+	background-size: auto;
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
-	top: 0;
-	left: 0;
-	min-width: 100%;
-	min-height: 100%;
 }
 
 .description {
@@ -120,7 +112,7 @@ html, body {
 .socialMedia {
 	width: 100%;
 	height: 20%;
-	background-size:cover;
+	background-size: auto;
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
