--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html, body {
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: auto;
+	background-size: 100% 100%;
 }
 
 /*container*/
@@ -84,11 +84,11 @@ html, body {
 .portrait {
 	width: 100%;
 	height: 50%;
-	background-size: auto;
+	background-size: 100% 100%;
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: 100% 100%;
 }
 
 .description {
@@ -112,17 +112,13 @@ html, body {
 .socialMedia {
 	width: 100%;
 	height: 20%;
-	background-size: auto;
+	background-size: 100% 100%;
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
 	margin-bottom: 5%;
 	opacity: 0.9;
-	top: 0;
-	left: 0;
-	min-width: 100%;
-	min-height: 100%;
 }
 
 .fa {
