--- a/style.css
+++ b/style.css
@@ -20,10 +20,38 @@ html, body {
 	height: 100%;
 	background-image: url("beach.jpg");
 	display: table;
+	background-size: cover;
 	background-attachment: fixed;
-	background-position: center;
+	background-position: center center;
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
+}
+
+@media only screen and (max-device-width: 320px) {
+	.background_picture {
+		background-size: 320px;
+	}
+
+	.portrait {
+		background-size: 320px;
+	}
+
+	.socialMedia {
+		background-size: 320px;	
+	}
+}
+
+@media only screen and (max-device-width: 320px) {
+	.background_picture {
+		background-size: 320px;
+	}
+
+	.portrait {
+		background-size: 320px;
+	}
+
+	.socialMedia {
+		background-size: 320px;	
+	}
 }
 
 /*container*/
@@ -84,11 +112,11 @@ html, body {
 .portrait {
 	width: 100%;
 	height: 50%;
-	background-size: 100% 100%;
+	background-size: cover;
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-position: 100% 100%;
+	background-position: center center;
 }
 
 .description {
@@ -112,7 +140,7 @@ html, body {
 .socialMedia {
 	width: 100%;
 	height: 20%;
-	background-size: 100% 100%;
+	background-size: cover;
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
