--- a/style.css
+++ b/style.css
@@ -28,15 +28,15 @@ html, body {
 
 @media only screen and (max-device-width: 320px) {
 	.background_picture {
-		background-size: contain;
+		background-size: 100%;
 	}
 
 	.portrait {
-		background-size: contain;
+		background-size: 100%;
 	}
 
 	.socialMedia {
-		background-size: contain;
+		background-size: 100%;
 	}
 }
 
