--- a/style.css
+++ b/style.css
@@ -28,15 +28,18 @@ html, body {
 
 @media only screen and (max-device-width: 320px) {
 	.background_picture {
-		background-size: 100%;
+		min-height: 100%;
+		min-width: 100%;
 	}
 
 	.portrait {
-		background-size: 100%;
+		min-height: 100%;
+		min-width: 100%;
 	}
 
 	.socialMedia {
-		background-size: 100%;
+		min-height: 100%;
+		min-width: 100%;
 	}
 }
 
