--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
 	padding: 0;
 	height: 100%;
 	width: 100%;
+	background: rgb(210,210,210);
 }
 
 ::-webkit-scrollbar {
@@ -41,6 +42,7 @@ html, body {
 	font-weight: lighter;
 	margin-top: 180px;
 	margin-bottom: 215px;
+	letter-spacing: 0.7vw;
 }
 
 .quote {
@@ -70,11 +72,12 @@ html, body {
 	text-align: center;
 	padding: 1px;
 	height: 200px;
+	letter-spacing: 0.5vw;
 }
 
 .about h1 {
 	font-family: 'Playfair Display SC';
-	font-size: 60px;
+	font-size: 55px;
 	margin-top: 15px;
 	margin-bottom: 0px;
 }
@@ -97,7 +100,6 @@ html, body {
 
 .description {
 	width: 70%;
-	background: rgb(220,220,220);
 	font-family: 'Raleway';
 	padding-top: 75px;
 	padding-bottom: 75px;
@@ -115,45 +117,47 @@ html, body {
 
 .socialMedia {
 	width: 100%;
-	height: 20%;
+	height: 30%;
 	background-size: cover;
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
-	margin-bottom: 5%;
-	opacity: 0.9;
 }
 
 .fa {
     padding: 10px;
     font-size: 25px;
     width: 25px;
-    text-align: center;
-    border-radius: 50%;
+    border-radius: 20%;
     margin-right: 5%;
+    margin-left: 5%;
+    margin-top: 3%;
 }
 
 .fa-facebook {
 	background: linear-gradient(to top right, rgb(85,110,255), rgb(85,110,150));
     color: white;
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
 .fa-instagram {
 	background: linear-gradient(to top left, rgb(255,140,30), rgb(185,50,140));
     color: white;
+    opacity: 0.8;
 }
 
 .fa-snapchat-ghost {
 	text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;
 	background: linear-gradient(to top right, rgb(255,220,0), rgb(255,253,102));
 	color: white;
+	opacity: 0.8;
 }
 
 .fa-wechat {
 	background: linear-gradient(to bottom right, rgb(90,255,70), rgb(90,200,70));
 	color: white;
+	opacity: 0.8;
 }
 
 /* The Modal (background) */
@@ -174,7 +178,7 @@ html, body {
     background-color: transparent;
     border-style: solid;
     border: none !important;
-    padding: 20px;
+    padding: auto;
     margin-top: 5%;
     margin-bottom: 10%;
     border: 1px solid #888;
@@ -183,8 +187,6 @@ html, body {
     font-size: 25px;
     font-family: 'Raleway';
     max-width: 66em;
-    width: 90%;
-    height: 100%;
 
     -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
@@ -194,33 +196,66 @@ html, body {
 /* The Close Button */
 .close {
     color: red;
-    /*color: #aaa;*/
     float: right;
-    font-size:50px;
+    font-size: 50px;
     font-weight: bolder;
     cursor: pointer;
 }
 
+hr {
+	height: 12px;
+	margin: 0;
+	background: rgb(40,40,40);
+	border-color: rgb(40,40,40);
+}
+
 .interests {
-	padding-bottom: 100px;
+	padding-bottom: 200px;
 	text-align: center;
 }
 
+.contentHeader {
+	background: rgb(52,52,52);
+	color: white;
+	font-weight: bold;
+	font-size: 30px;
+	font-family: 'Arima Madurai';
+	height: 70px;
+	padding-top: 50px;
+	padding-bottom: 20px;
+	letter-spacing: 5vw;
+}
+
+.buttonHeader {
+	background: rgb(52,52,52);
+}
+
 .button {
-	font-family: 'Abril Fatface';
+	color: white;
+	font-family: 'Raleway';
 	background-color: transparent;
-	border-color: white;
+	border-color: rgb(52,52,52);
 	border-style: solid;
-	padding-top: 30px;
+	padding-top: 10px;
 	outline: none;
 	cursor: pointer;
 	display: solid;
 
-	width: 17%;
+	width: 13%;
 	font-size: 1.3vw;
-	margin-top: 5%;
-	margin-bottom: 5%;
+	margin-top: 2%; 
+	margin-bottom: 2%;
 	transition: font-size 0.5s;
+}
+
+button:hover {
+	font-size: 1.6vw;
+	border-top-color: rgb(180,180,180);
+}
+
+.bar {
+	font-size: 25px;
+	color: white;
 }
 
 a {
@@ -229,41 +264,28 @@ a {
 	display: inline-block;
 }
 
-button:hover {
-	font-size: 2vw;
-	border-top-color: rgb(220,220,220);
+.contentSection {
+	margin-top: 8%;
 }
 
-.bar {
-	font-size: 25px;
-}
-
-.contentPage {
-	text-align: center;
-}
-
-.contentPage img {
+.contentSection img {
 	object-fit: cover;
 	width: 400px;
 	height: 400px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.4);
 	border-radius: 1%;
 	cursor: pointer;
-}
 
-.contentPage p {
-	font-size: 60px;
-	font-family: 'Arima Madurai';
-	padding-top: 100px;
-	padding-bottom: 700px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 35px;
+	margin-bottom: 35px;
 }
 
 footer {
-	background-color: rgb(220,220,220);
+	background-color: rgb(190,190,190);
 	font-family: 'Raleway';
 	padding-left: 50px;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	margin-left: 50px;
-	margin-right: 50px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
