--- a/style.css
+++ b/style.css
@@ -175,30 +175,26 @@ html, body {
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: transparent;
-    border-style: solid;
-    border: none !important;
-    padding: auto;
-    margin-top: 5%;
-    margin-bottom: 10%;
-    border: 1px solid #888;
-    display: inline-block;
     color: white;
     font-size: 25px;
     font-family: 'Raleway';
-    max-width: 66em;
+    display: table-cell;
+    padding-top: 10%;
+}
 
-    -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
-    overflow-x: scroll;
+.landModals img {
+	max-width: 100%;
+	max-width: 100%;
 }
 
 /* The Close Button */
 .close {
-    color: red;
-    float: right;
+	position: absolute;
+	top: 15px;
+	left: 35px;
+    color: rgb(220,220,220);
     font-size: 50px;
-    font-weight: bolder;
+    font-weight: bold;
     cursor: pointer;
 }
 
@@ -223,11 +219,12 @@ hr {
 	height: 70px;
 	padding-top: 3%;
 	padding-left: 4vw;
-	padding-bottom: 9%;
+	padding-bottom: 7%;
 	letter-spacing: 5vw;
 }
 
 .buttonHeader {
+	margin-top: 0;
 	background: rgb(52,52,52);
 }
 
@@ -267,11 +264,10 @@ a {
 
 .quote2 {
 	padding-top: 3%;
-	font-size: 1vw;
+	font-size: 0.7vw;
 	font-family: 'Raleway';
 	word-spacing: 5px;
 	letter-spacing: 4px;
-	width: 80%;
 	margin: auto;
 	padding-bottom: 10px;
 }
@@ -279,7 +275,7 @@ a {
 .quote2Author {
 	font-family: 'Raleway';
 	font-style: italic;
-	font-size: 15px;
+	font-size: 0.7vw;
 	text-transform: uppercase;
 	word-spacing: 3px;
 	letter-spacing: 1px;
@@ -301,6 +297,11 @@ a {
 	margin-right: 20px;
 	margin-top: 35px;
 	margin-bottom: 35px;
+}
+
+.imageStyle img:hover {
+	-webkit-filter: brightness(60%);
+	transition: 0.2s;
 }
 
 footer {
