--- a/style.css
+++ b/style.css
@@ -162,15 +162,16 @@ html, body {
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed;  /*Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.8);
+    cursor: pointer;
 }
 
 /* Modal Content/Box */
@@ -179,23 +180,12 @@ html, body {
     font-size: 25px;
     font-family: 'Raleway';
     display: table-cell;
-    padding-top: 10%;
+    padding-top: 3%;
 }
 
 .landModals img {
 	max-width: 100%;
 	max-width: 100%;
-}
-
-/* The Close Button */
-.close {
-	position: absolute;
-	top: 15px;
-	left: 35px;
-    color: rgb(220,220,220);
-    font-size: 50px;
-    font-weight: bold;
-    cursor: pointer;
 }
 
 hr {
