--- a/style.css
+++ b/style.css
@@ -100,8 +100,7 @@ html, body {
 
 .description {
 	width: 90%;
-	/*font-family: 'Raleway';*/
-	font-family: 'Playfair Display SC';
+	font-family: 'Raleway';
 	padding-top: 75px;
 	padding-bottom: 75px;
 	margin: auto;
