--- a/style.css
+++ b/style.css
@@ -263,18 +263,18 @@ a {
 }
 
 .quote2Author {
+	color: white;
 	font-family: 'Raleway';
-	font-size: 0.7vw;
+	font-size: 0.75vw;
 	text-transform: uppercase;
 	word-spacing: 3px;
 	letter-spacing: 1px;
 }
 
 .lange {
-	color: white;
 	background-color: rgb(52,52,52);
-	outline: none;
-
+	border: none;
+	border-radius: 10%;
 }
 
 .contentSection {
