--- a/style.css
+++ b/style.css
@@ -276,8 +276,6 @@ a {
 	border: none;
 	border-radius: 3%;
 	padding: 6px;
-
-	transition: font-size 0.2s;
 }
 
 .lange button:hover {
@@ -285,6 +283,8 @@ a {
 	font-size: 0.9vw;
 	word-spacing: 5px;
 	letter-spacing: 3px;
+
+	transition: 0.2s;
 }
 
 .contentSection {
