--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ html, body {
 }
 
 .background_picture {
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	height: auto;
 	background-image: url("beach.jpg");
 	display: table;
 	background-size: cover;
@@ -273,13 +273,6 @@ a {
 	letter-spacing: 1px;
 	border-radius: 1%;
 	padding: 6px;
-
-	transition: color 1s, background-color 1s;
-}
-
-.lange button:hover {
-	color: white;
-	background-color: rgb(120,120,120);
 }
 
 .contentSection {
