--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ html, body {
 .portrait {
 	width: 100%;
 	height: 50%;
-	background-size: cover;
+	/*background-size: cover;*/
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -118,7 +118,7 @@ html, body {
 .socialMedia {
 	width: 100%;
 	height: 20%;
-	background-size: cover;
+	/*background-size: cover;*/
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
