--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
 
 .background_picture {
 	width: 100%;
-	height: 50%;
+	height: auto;
 	background-image: url("beach.jpg");
 	display: table;
 	background-size: contain;
