--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
 
 .background_picture {
 	width: 100%;
-	height: auto;
+	height: 100%;
 	background-image: url("beach.jpg");
 	display: table;
 	background-size: contain;
@@ -90,7 +90,7 @@ html, body {
 
 .portrait {
 	width: 100%;
-	height: 50%;
+	height: 100%;
 	background-size: contain;
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
@@ -117,7 +117,7 @@ html, body {
 
 .socialMedia {
 	width: 100%;
-	height: 20%;
+	height: 100%;
 	background-size: contain;
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
@@ -218,7 +218,7 @@ hr {
 	background: rgb(52,52,52);
 }
 
-.button {
+.catButton {
 	color: white;
 	font-family: 'Raleway';
 	background-color: transparent;
@@ -236,7 +236,7 @@ hr {
 	transition: font-size 0.5s;
 }
 
-button:hover {
+.catButton button:hover {
 	font-size: 1.6vw;
 	border-top-color: rgb(180,180,180);
 }
