--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html, body {
 	height: 100%;
 	background-image: url("beach.jpg");
 	display: table;
-	background-size: contain;
+	background-size: cover;
 	background-attachment: fixed;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -90,8 +90,8 @@ html, body {
 
 .portrait {
 	width: 100%;
-	height: 100%;
-	background-size: contain;
+	height: 50%;
+	background-size: cover;
 	background-image: url("portrait.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -117,8 +117,8 @@ html, body {
 
 .socialMedia {
 	width: 100%;
-	height: 100%;
-	background-size: contain;
+	height: 20%;
+	background-size: cover;
 	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
