--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Indie Flower');
 
-html, body {
+body, html {
 	margin: 0;
 	padding: 0;
 	height: 100%;
@@ -17,14 +17,20 @@ html, body {
 }
 
 .background_picture {
-	width: 100%;
-	height: 100%;
 	background-image: url("beach.jpg");
+	height: 100%;
+	width: 100%;
 	display: table;
-	background-size: cover;
 	background-attachment: fixed;
-	background-position: center center;
+	background-position: center;
 	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+@media only screen and (max-device-width: 1024px) {
+    .parallax {
+        background-attachment: scroll;
+    }
 }
 
 /*container*/
@@ -53,17 +59,6 @@ html, body {
 	letter-spacing: 3px;
 	margin: auto;
 	width: 80%;
-}
-
-@media only screen and (max-device-width: 1000px) {
-	.quote {
-		width: 430px;
-		margin: auto;
-	}
-
-	footer {
-		font-size: 7px;
-	}
 }
 
 .about {
