--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ body, html {
 	height: 100%;
 	width: 100%;
 	display: table;
-	/*background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;*/
+	/*background-attachment: fixed;*/
+	background-position: center center;
+	/*background-repeat: no-repeat;*/
 	background-size: cover;
 }
 
@@ -88,8 +88,8 @@ body, html {
 	height: 50%;
 	background-size: cover;
 	background-image: url("portrait.jpg");
-	background-attachment: fixed;
-	background-repeat: no-repeat;
+	/*background-attachment: fixed;
+	background-repeat: no-repeat;*/
 	background-position: center center;
 }
 
