--- a/style.css
+++ b/style.css
@@ -21,17 +21,18 @@ body, html {
 	height: 100%;
 	width: 100%;
 	display: table;
-	/*background-attachment: fixed;*/
+	background-attachment: fixed;
 	background-position: center center;
-	/*background-repeat: no-repeat;*/
+	background-repeat: no-repeat;
 	background-size: cover;
 }
 
-/*@media only screen and (max-device-width: 1024px) {
+@media only screen and (max-device-width: 1024px) {
     .parallax {
         background-attachment: scroll;
+		background-repeat: repeat;        
     }
-}*/
+}
 
 /*container*/
 .intro {
@@ -88,8 +89,8 @@ body, html {
 	height: 50%;
 	background-size: cover;
 	background-image: url("portrait.jpg");
-	/*background-attachment: fixed;
-	background-repeat: no-repeat;*/
+	background-attachment: fixed;
+	background-repeat: no-repeat;
 	background-position: center center;
 }
 
