--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body, html {
 }
 
 @media only screen and (max-device-width: 1024px) {
-    .parallax {
+    .background {
         background-attachment: scroll;
 		background-repeat: repeat;        
     }
