--- a/style.css
+++ b/style.css
@@ -32,11 +32,6 @@ body, html {
         background-attachment: scroll;
 		background-repeat: repeat;
     }
-
-    .portrait {
-    	background-attachment: scroll;
-		background-repeat: repeat;
-    }
 }
 
 /*container*/
@@ -90,13 +85,20 @@ body, html {
 }
 
 .portrait {
+	background-image: url("portrait.jpg");
 	width: 100%;
 	height: 50%;
-	background-size: cover;
-	background-image: url("portrait.jpg");
 	background-attachment: fixed;
-	background-repeat: no-repeat;
 	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+@media only screen and (max-device-width: 1024px) {
+	.portrait {
+    	background-attachment: scroll;
+		background-repeat: repeat;
+    }
 }
 
 .description {
