--- a/style.css
+++ b/style.css
@@ -119,13 +119,20 @@ body, html {
 }
 
 .socialMedia {
+	background-image: url("socialMedia.jpg");
 	width: 100%;
 	height: 20%;
-	background-size: cover;
-	background-image: url("socialMedia.jpg");
 	background-attachment: fixed;
-	background-repeat: no-repeat;
 	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+@media only screen and (max-device-width: 1024px) {
+	.socialMedia {
+    	background-attachment: scroll;
+		background-repeat: repeat;
+    }
 }
 
 .socialMedia a {
@@ -212,7 +219,8 @@ hr {
 	background: rgb(30,30,30);
 	color: white;
 	font-size: 3vw;
-	font-family: 'Arima Madurai';
+	/*font-family: 'Arima Madurai';*/
+	font-family: 'Raleway';
 	height: 70px;
 	padding-top: 3%;
 	padding-left: 4vw;
