--- a/style.css
+++ b/style.css
@@ -48,18 +48,17 @@ body, html {
 	font-size: 50px;
 	font-weight: lighter;
 	margin-top: 180px;
-	margin-bottom: 215px;
+	margin-bottom: 70px;
 	letter-spacing: 0.7vw;
 }
 
 .quote1 {
 	color: white;
-	font-size: 18px;
 	font-family: 'Raleway';
-	word-spacing: 3px;
-	letter-spacing: 3px;
+	text-transform: uppercase;
+	font-size: 25px;
+	letter-spacing: 2px;
 	margin: auto;
-	width: 80%;
 }
 
 .about {
@@ -269,10 +268,9 @@ a {
 
 .quote2 {
 	padding-top: 3%;
-	font-size: 0.7vw;
+	font-size: 0.8vw;
 	font-family: 'Raleway';
-	word-spacing: 5px;
-	letter-spacing: 4px;
+	letter-spacing: 1px;
 	margin: auto;
 	padding-bottom: 10px;
 }
