--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,7 +70,7 @@ body, html {
     width: 20px;
     border-radius: 20%;
     margin-right: 1.7%;
-    margin-top: 2.7vmin;
+    margin-top: 2.6vmin;
     opacity: 0.9;
 }
 
@@ -110,8 +110,9 @@ body, html {
 /*Landing Page*/
 #photography .background_picture {
 	background-image: url("beach.jpg");
+  width: 100%;
+  max-width: 100%;
 	height: 100%;
-	max-width: 100%;
 	display: table;
 	background-attachment: fixed;
 	background-position: center center;
@@ -128,8 +129,8 @@ body, html {
 /*Landing Page container*/
 #photography .animation-intro {
   font-color: white;
-	max-width: 47%;
-  max-height: 75%;
+	width: 47%;
+  height: 75%;
 	margin: 0 auto;
   position: relative;
   text-align: center;
@@ -137,18 +138,18 @@ body, html {
 #photography .animation-text {
   color: black;
   font-family: "Raleway";
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 2vh;
+  line-height: 3vh;
   position: absolute;
-  top: 13rem;
+  top: 20%;
   animation-name: topFadeIn;
   animation-delay: 0.2s;
   animation-duration: 5s;
   animation-fill-mode: forwards;
 }
 @keyframes topFadeIn {
-  0% { position: absolute; top: -3rem; opacity: 0;}
-  75% { position: absolute; top: 13rem; opacity: 1; }
+  0% { position: absolute; top: -5%; opacity: 0;}
+  75% { position: absolute; top: 20%; opacity: 1; }
   100% { opacity: 1; }
 }
 
@@ -160,8 +161,9 @@ body, html {
 
 #photography .portrait {
 	background-image: url("portrait.jpg");
+  width: 100%;
   max-width: 100%;
-  height: 50%;
+  height: 650px;
 	background-attachment: fixed;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -300,7 +302,7 @@ body, html {
 
 #photography #foot {
   list-style-type: none;
-  color: white;
+  color: rgb(220,220,220);
   background-color: rgb(45,45,45);
   font-family: 'Raleway';
 }
