--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,15 +114,15 @@ body, html {
   max-width: 100%;
 	height: 100%;
 	display: table;
+  background-position: center center;
 	background-attachment: fixed;
-	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 @media only screen and (max-device-width: 1024px) {
     .background_picture {
       background-attachment: scroll;
-      background-repeat: repeat;
+      background-size: contain;
     }
 }
 
@@ -162,17 +162,16 @@ body, html {
 #photography .portrait {
 	background-image: url("portrait.jpg");
   width: 100%;
-  max-width: 100%;
   height: 650px;
+  background-position: center center;
 	background-attachment: fixed;
-	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 @media only screen and (max-device-width: 1024px) {
     .portrait {
       background-attachment: scroll;
-      background-repeat: repeat;
+      background-size: contain;
     }
 }
 
@@ -261,7 +260,6 @@ body, html {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.8);
     cursor: pointer;
 }
