--- a/stylesheet.css
+++ b/stylesheet.css
@@ -115,13 +115,12 @@ body, html {
 	height: 100%;
 	display: table;
   background-position: center center;
+  background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-repeat: no-repeat;
 	background-size: cover;
 }
 @media only screen and (max-device-width: 1024px) {
     .background_picture {
-      background-attachment: scroll;
       background-size: contain;
     }
 }
@@ -164,14 +163,14 @@ body, html {
   width: 100%;
   height: 650px;
   background-position: center center;
+  background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-size: cover;
+  background-size: 100%;
 }
 @media only screen and (max-device-width: 1024px) {
     .portrait {
-      background-attachment: scroll;
       background-size: contain;
+      height: 100px;
     }
 }
 
