--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,9 +119,9 @@ body, html {
 	background-attachment: fixed;
 	background-size: cover;
 }
-@media only screen and (max-device-width: 1024px) {
+@media only screen and (max-width: 1024px) {
     .background_picture {
-      background-size: auto 100%;
+      background-size: contain;
     }
 }
 
@@ -167,9 +167,9 @@ body, html {
 	background-attachment: fixed;
   background-size: cover;
 }
-@media only screen and (max-device-width: 1024px) {
+@media only screen and (max-width: 1024px) {
     .portrait {
-      background-size: auto 100%;
+      background-size: contain;
     }
 }
 
